# PVK-Engine-Reloaded

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  main.cpp
.github/workflows/: build_asset_manager.yml  build_engine.yml  cmake.yml
asset_manager/: Beta_Joints.pvm  Beta_Surface.pvm  BinaryHelper.cpp  BinaryHelper.hpp  CMakeLists.txt  imgui.ini  main.cpp
lib/asset/: AssetHelper.cpp  AssetHelper.hpp  Blueprint.cpp  Blueprint.hpp  CMakeLists.txt  MaterialInfo.cpp  MaterialInfo.hpp  TextureMapping.hpp  Vertex.hpp
lib/engine/: Application.cpp  Application.hpp  CMakeLists.txt  Engine.cpp  Engine.hpp  Graphics.cpp  Graphics.hpp  RenderPipeline.cpp  RenderPipeline.hpp  RenderStage.cpp  RenderStage.hpp  RenderStageBase.cpp  RenderStageBase.hpp
lib/engine/camera/: Camera.cpp  Camera.hpp  CameraArc.cpp  CameraArc.hpp
lib/engine/entity/: Entity.cpp  Entity.hpp
lib/engine/exceptions/: PvkException.hpp  PvkExceptionAsset.hpp  PvkExceptionGraphics.hpp  PvkExceptionUI.hpp
lib/engine/pipeline/: RenderStageBuilder.cpp  RenderStageBuilder.hpp  ShaderReflection.cpp  ShaderReflection.hpp
lib/engine/render_stage/: RenderStage.cpp  RenderStage.hpp  RenderStageBuilder.cpp  RenderStageBuilder.hpp  Shader.cpp  Shader.hpp  ShaderBuilder.cpp  ShaderBuilder.hpp  ShaderReflection.cpp  ShaderReflection.hpp
lib/engine/shader/: Descriptor.cpp  Descriptor.hpp  Texture.cpp  Texture.hpp  UniformBuffer.cpp  UniformBuffer.hpp
lib/geometry/: CMakeLists.txt  Drawable.hpp  Material.cpp  Material.hpp  Mesh.cpp  Mesh.hpp  Node.cpp  Node.hpp  Object.cpp  Object.hpp  Scene.cpp  Scene.hpp  Vertex.hpp
lib/io/: AssetLoader.cpp  AssetLoader.hpp  CMakeLists.txt  Keyboard.hpp  io.cpp  io.hpp
lib/ui/: CMakeLists.txt  LogWidget.cpp  LogWidget.hpp  OverlayWidget.cpp  OverlayWidget.hpp  RenderStageUI.cpp  RenderStageUI.hpp  TreeWidget.cpp  TreeWidget.hpp  Widget.hpp
lib/vulkan/: Buffer.cpp  Buffer.hpp  CMakeLists.txt  CommandBuffer.cpp  CommandBuffer.hpp  CommandPool.cpp  CommandPool.hpp  Context.cpp  Context.hpp  DescriptorPool.cpp  DescriptorPool.hpp  Device.cpp  Device.hpp  Fence.cpp  Fence.hpp  FrameBuffer.cpp  FrameBuffer.hpp  Helper.cpp  Helper.hpp  Image.cpp  Image.hpp  Instance.cpp  Instance.hpp  MemoryAllocator.cpp  MemoryAllocator.hpp  Pipeline.cpp  Pipeline.hpp  RenderPass.cpp  RenderPass.hpp  Sampler.cpp  Sampler.hpp  Semaphore.cpp  Semaphore.hpp  Surface.cpp  Surface.hpp  SwapChain.cpp  SwapChain.hpp  VulkanObject.hpp  Window.cpp  Window.hpp
shaders/: imgui.ini  triangle.frag  triangle.frag.spv  triangle.vert  triangle.vert.spv
